# toy-cow-block-storage

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: regression.rs
benches/regression/: durable.rs  group.rs  local.rs  main.rs  native.rs
docs/: block-delta-journal-plan.md  block-fsync-tail-stage2-plan.md  block-write-commit-boundary-plan.md  block-writeback-latency-plan.md  concurrent-metadata-provider-plan.md  cow-block-storage-design.md  durable-append-run-architecture-plan.md  durable-performance-architecture-hypothesis-plan.md  durable-performance-baseline-results.md  implementation-plan.md  native-file-batch-commit-plan.md
infra/gcp-local-nvme-bench/: remote_block_vs_rbd.sh  remote_c4_layout_matrix.sh  run_block_vs_rbd.sh  run_c4_layout_matrix.sh
infra/gcp-rapidstorage-bench/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  run_once.sh  run_remote.sh  startup.sh.tftpl  variables.tf  versions.tf
infra/gcp-rapidstorage-bench/results/: rapid-latency-c3-88-tier1.csv  rapid-results-c3-88-tier1.csv  rapid-results.csv  rapid-tcp-rtt-c3-88-tier1.csv
src/: api.rs  error.rs  extent.rs  id.rs  lib.rs  local.rs  main.rs  object.rs  provider.rs  sim.rs
src/core/: mod.rs
src/local/: client.rs  codec.rs  config.rs  coordinator.rs  metadata_plane.rs  metadata_tree.rs  mod.rs  observability.rs  profiles.rs  proof.rs  read_path.rs  segment_catalog.rs  segment_store.rs  server.rs  storage_node.rs  txn_metadata.rs  util.rs
tools/gcp-rapidstorage-bench/: README.md  go.mod  go.sum  main.go
(+40 files in other folders)
