[package]
name = "toy-cow-block-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "regression"
harness = false
