[package]
name = "toy-cow-block-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
crc32c = "0.6.8"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "regression"
path = "benches/regression/main.rs"
harness = false
